Did a round of suggested code updates.